--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="about-header">
                   <img
                   class="image-circle"
-                  src="images/pete-thinkful.png"
+                  src="pete-thinkful.png"
                   alt="Pete Thinkful"
                   />
                   <div class="about-title">
@@ -82,7 +82,7 @@
           <section>
             <h3>Abstract Red</h3>
             <div>
-              <img src="images/abstract-red.png" alt="Abstract Red" />
+              <img src="abstract-red.png" alt="Abstract Red" />
             </div>
             <p>
               Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
@@ -93,7 +93,7 @@
           <section>
             <h3>Spiral Zany</h3>
             <div>
-              <img src="images/spiral-zany.png" alt="Spiral Zany" />
+              <img src="spiral-zany.png" alt="Spiral Zany" />
             </div>
             <p>
               Sriracha portland taxidermy cronut messenger bag, vegan
@@ -104,7 +104,7 @@
           <section>
             <h3>Melted Rainbow</h3>
             <div>
-              <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
+              <img src="melted-rainbow.png" alt="Melted Rainbow" />
             </div>
             <p>
               Edison bulb single-origin coffee snackwave, actually ennui
