--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pete's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -40,12 +40,12 @@
             <div class="portfolio-items">
                 <!-- Portfolio items would go here -->
                 <div class="portfolio-item">
-                    <img src="project1.jpg" alt="Project 1">
+                    <img src="abstract-red.png" alt="Abstract Red">
                     <h3>Project 1</h3>
                     <p>Description of Project 1</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="project2.jpg" alt="Project 2">
+                    <img src="spiral-zany.png" alt="Spiral Zany">
                     <h3>Project 2</h3>
                     <p>Description of Project 2</p>
                 </div>
