--- a/index.html
+++ b/index.html
@@ -1,79 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pete's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pete Thinkful</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <!-- Header section -->
     <header>
-        <div class="container">
-            <h1>Pete's Portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+      <h1>Pete Thinkful | Artist</h1>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </header>
 
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>Hi, I'm Pete! I'm a passionate web developer based in...</p>
-            <p>Here are some of my skills:</p>
-            <ul>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JavaScript</li>
-                <li>...</li>
-            </ul>
-        </div>
-    </section>
-
-    <section id="portfolio">
-        <div class="container">
-            <h2>Portfolio</h2>
-            <div class="portfolio-items">
-                <!-- Portfolio items would go here -->
-                <div class="portfolio-item">
-                    <img src="abstract-red.png" alt="Abstract Red">
-                    <h3>Project 1</h3>
-                    <p>Description of Project 1</p>
-                </div>
-                <div class="portfolio-item">
-                    <img src="spiral-zany.png" alt="Spiral Zany">
-                    <h3>Project 2</h3>
-                    <p>Description of Project 2</p>
-                </div>
-                <!-- Add more portfolio items as needed -->
+    <main>
+      <div>
+        <!-- About section -->
+        <article id="about">
+          <h2>About</h2>
+          <section>
+            <div class="about-sect">
+                <div class="about-header">
+                  <img
+                  class="image-circle"
+                  src="pete-thinkful.png"
+                  alt="Pete Thinkful"
+                  />
+                  <div class="about-title">
+            <h3>Hi! I'm Pete Thinkful</h3>
             </div>
-        </div>
-    </section>
+          </div>
+          <div class="about-description">
+            <p>I'm an artist living in Denver, Colorado.</p>
+            <p>As an artist, I'm interested in:</p>
+            <ul>
+              <li>Producing abstract art</li>
+              <li>Creating street graffiti art</li>
+              <li>Connecting with like-minded artists</li>
+            </ul>
+            <p>
+              Please feel free to take a look at my website and feel free to
+              <a href="#contact">contact me</a>.
+            </p>
+            </div>
+          </div>
+          </section>
 
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <form action="submit_form.php" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="4" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-    </section>
+          <section>
+            <h3>Pete's Background</h3>
+            <div class="pete-background">
+            <p>
+              After graduating college, I became an art teacher and worked with
+              beginners and professionals. I love art and my works have been
+              featured in major art galleries across the globe.
+            </p>
+            <p>
+              If you're looking to hire an artist or if you're an artist looking
+              for a collaborator for your next project, please reach out! I'm so
+              excited to work with other artists to create new art.
+            </p>
+            </div>
+          </div>
+          </section>
+        </article>
 
+        <hr />
+
+        <!-- Portfolio section -->
+        <article id="portfolio">
+          <h2>Portfolio</h2>
+          <div class="collection">
+          <section>
+            <h3>Abstract Red</h3>
+            <div>
+              <img src="abstract-red.png" alt="Abstract Red" />
+            </div>
+            <p>
+              Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
+              waistcoat scenester hell of.
+            </p>
+          </section>
+
+          <section>
+            <h3>Spiral Zany</h3>
+            <div>
+              <img src="spiral-zany.png" alt="Spiral Zany" />
+            </div>
+            <p>
+              Sriracha portland taxidermy cronut messenger bag, vegan
+              distillery. Vaporware kickstarter air plant mumblecore food truck.
+            </p>
+          </section>
+
+          <section>
+            <h3>Melted Rainbow</h3>
+            <div>
+              <img src="melted-rainbow.png" alt="Melted Rainbow" />
+            </div>
+            <p>
+              Edison bulb single-origin coffee snackwave, actually ennui
+              locavore shabby chic forage.
+            </p>
+          </section>
+          </div>
+        </article>
+
+        <hr />
+
+        <!-- Contact section -->
+        <article id="contact">
+          <h2>Contact</h2>
+          <p>
+            I'd love to hear from you! Please feel free to contact or follow me:
+          </p>
+          <ol>
+            <li>
+              <a href="">LinkedIn</a>
+            </li>
+            <li>
+              <a href="">Instagram</a>
+            </li>
+            <li>
+              <a href="">Pinterest</a>
+            </li>
+          </ol>
+        </article>
+      </div>
+    </main>
+
+    <!-- Footer section -->
     <footer>
-        <div class="container">
-            <p>&copy; 2024 Pete's Portfolio. All rights reserved.</p>
-        </div>
+      <p>© Pete Thinkful. All rights reserved.</p>
     </footer>
-
-</body>
+  </body>
 </html>
