--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pete Thinkful</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="style.css" rel="stylesheet" type="text/css">
-  <!-- Adding Google Fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
-</head>
-<body>
-  <!-- Header section -->
-  <header>
-    <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pete Thinkful</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <!-- Header section -->
+    <header>
       <h1>Pete Thinkful | Artist</h1>
       <nav>
         <a href="#about">About</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
       </nav>
-    </div>
-  </header>
+    </header>
 
-  <main>
-    <!-- About section -->
-    <section id="about">
-      <div class="container">
-        <h2>About</h2>
-        <div class="about-content">
-          <div class="about-header">
-            <img class="image-circle" src="pete-thinkful.png" alt="Pete Thinkful">
-            <div class="about-title">
-              <h3>Hi! I'm Pete Thinkful</h3>
+    <main>
+      <div>
+        <!-- About section -->
+        <article id="about">
+          <h2>About</h2>
+          <section>
+            <div class="about-sect">
+                <div class="about-header">
+                  <img
+                  class="image-circle"
+                  src="pete-thinkful.png"
+                  alt="Pete Thinkful"
+                  />
+                  <div class="about-title">
+            <h3>Hi! I'm Pete Thinkful</h3>
             </div>
           </div>
           <div class="about-description">
@@ -44,70 +47,99 @@
               <li>Creating street graffiti art</li>
               <li>Connecting with like-minded artists</li>
             </ul>
-            <p>Please feel free to take a look at my website and feel free to <a href="#contact">contact me</a>.</p>
-          </div>
-        </div>
-        <div class="pete-background">
-          <h3>Pete's Background</h3>
-          <p>After graduating college, I became an art teacher and worked with beginners and professionals. I love art and my works have been featured in major art galleries across the globe.</p>
-          <p>If you're looking to hire an artist or if you're an artist looking for a collaborator for your next project, please reach out! I'm so excited to work with other artists to create new art.</p>
-        </div>
-      </div>
-    </section>
-
-    <hr>
-
-    <!-- Portfolio section -->
-    <section id="portfolio">
-      <div class="container">
-        <h2>Portfolio</h2>
-        <div class="collection">
-          <div class="portfolio-item">
-            <img src="abstract-red.png" alt="Abstract Red">
-            <div class="portfolio-item-description">
-              <h3>Abstract Red</h3>
-              <p>Vaporware wayfarers heirloom neutra disrupt. Activated charcoal waistcoat scenester hell of.</p>
+            <p>
+              Please feel free to take a look at my website and feel free to
+              <a href="#contact">contact me</a>.
+            </p>
             </div>
           </div>
-          <div class="portfolio-item">
-            <img src="spiral-zany.png" alt="Spiral Zany">
-            <div class="portfolio-item-description">
-              <h3>Spiral Zany</h3>
-              <p>Sriracha portland taxidermy cronut messenger bag, vegan distillery. Vaporware kickstarter air plant mumblecore food truck.</p>
+          </section>
+
+          <section>
+            <h3>Pete's Background</h3>
+            <div class="pete-background">
+            <p>
+              After graduating college, I became an art teacher and worked with
+              beginners and professionals. I love art and my works have been
+              featured in major art galleries across the globe.
+            </p>
+            <p>
+              If you're looking to hire an artist or if you're an artist looking
+              for a collaborator for your next project, please reach out! I'm so
+              excited to work with other artists to create new art.
+            </p>
             </div>
           </div>
-          <div class="portfolio-item">
-            <img src="melted-rainbow.png" alt="Melted Rainbow">
-            <div class="portfolio-item-description">
-              <h3>Melted Rainbow</h3>
-              <p>Edison bulb single-origin coffee snackwave, actually ennui locavore shabby chic forage.</p>
+          </section>
+        </article>
+
+        <hr />
+
+        <!-- Portfolio section -->
+        <article id="portfolio">
+          <h2>Portfolio</h2>
+          <div class="collection">
+          <section>
+            <h3>Abstract Red</h3>
+            <div>
+              <img src="abstract-red.png" alt="Abstract Red" />
             </div>
+            <p>
+              Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
+              waistcoat scenester hell of.
+            </p>
+          </section>
+
+          <section>
+            <h3>Spiral Zany</h3>
+            <div>
+              <img src="spiral-zany.png" alt="Spiral Zany" />
+            </div>
+            <p>
+              Sriracha portland taxidermy cronut messenger bag, vegan
+              distillery. Vaporware kickstarter air plant mumblecore food truck.
+            </p>
+          </section>
+
+          <section>
+            <h3>Melted Rainbow</h3>
+            <div>
+              <img src="melted-rainbow.png" alt="Melted Rainbow" />
+            </div>
+            <p>
+              Edison bulb single-origin coffee snackwave, actually ennui
+              locavore shabby chic forage.
+            </p>
+          </section>
           </div>
-        </div>
+        </article>
+
+        <hr />
+
+        <!-- Contact section -->
+        <article id="contact">
+          <h2>Contact</h2>
+          <p>
+            I'd love to hear from you! Please feel free to contact or follow me:
+          </p>
+          <ol>
+            <li>
+              <a href="">LinkedIn</a>
+            </li>
+            <li>
+              <a href="">Instagram</a>
+            </li>
+            <li>
+              <a href="">Pinterest</a>
+            </li>
+          </ol>
+        </article>
       </div>
-    </section>
+    </main>
 
-    <hr>
-
-    <!-- Contact section -->
-    <section id="contact">
-      <div class="container">
-        <h2>Contact</h2>
-        <p>I'd love to hear from you! Please feel free to contact or follow me:</p>
-        <ol>
-          <li><a href="#">LinkedIn</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Pinterest</a></li>
-        </ol>
-      </div>
-    </section>
-  </main>
-
-  <!-- Footer section -->
-  <footer>
-    <div class="container">
+    <!-- Footer section -->
+    <footer>
       <p>© Pete Thinkful. All rights reserved.</p>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
