--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
         <!-- Contact section -->
         <article id="contact">
+          <div class="contact-info">
           <h2>Contact</h2>
           <p>
             I'd love to hear from you! Please feel free to contact or follow me:
@@ -134,6 +135,7 @@
             </li>
           </ol>
         </article>
+        </div>
       </div>
     </main>
 
