--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- Header section -->
-    <header>
+    <header class="header-container">
       <h1>Pete Thinkful | Artist</h1>
       <nav>
         <a href="#about">About</a>
@@ -21,25 +21,21 @@
         <a href="#contact">Contact</a>
       </nav>
     </header>
-
     <main>
       <div>
         <!-- About section -->
         <article id="about">
-          <h2>About</h2>
-          <section>
-            <div class="about-sect">
-                <div class="about-header">
-                  <img
-                  class="image-circle"
-                  src="pete-thinkful.png"
-                  alt="Pete Thinkful"
-                  />
-                  <div class="about-title">
-            <h3>Hi! I'm Pete Thinkful</h3>
-            </div>
+         <h2>About</h2>
+          <div class="about-redo">
+          <div>
+            <img
+              class="image-circle"
+              src="images/pete-thinkful.png"
+              alt="Pete Thinkful"
+            />
           </div>
-          <div class="about-description">
+          <section class="about-section">
+           <h3>Hi! I'm Pete Thinkful</h3>
             <p>I'm an artist living in Denver, Colorado.</p>
             <p>As an artist, I'm interested in:</p>
             <ul>
@@ -51,13 +47,10 @@
               Please feel free to take a look at my website and feel free to
               <a href="#contact">contact me</a>.
             </p>
-            </div>
-          </div>
           </section>
-
+        </div>
           <section>
             <h3>Pete's Background</h3>
-            <div class="pete-background">
             <p>
               After graduating college, I became an art teacher and worked with
               beginners and professionals. I love art and my works have been
@@ -68,57 +61,50 @@
               for a collaborator for your next project, please reach out! I'm so
               excited to work with other artists to create new art.
             </p>
-            </div>
-          </div>
           </section>
         </article>
-
         <hr />
-
         <!-- Portfolio section -->
         <article id="portfolio">
           <h2>Portfolio</h2>
-          <div class="collection">
-          <section>
+          <div class="portfolio-container">
+          <section class="art-card">
             <h3>Abstract Red</h3>
             <div>
-              <img src="abstract-red.png" alt="Abstract Red" />
+              <img src="images/abstract-red.png" alt="Abstract Red" />
             </div>
             <p>
               Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
               waistcoat scenester hell of.
             </p>
           </section>
-
-          <section>
+            <section  class="art-card">
             <h3>Spiral Zany</h3>
             <div>
-              <img src="spiral-zany.png" alt="Spiral Zany" />
+              <img src="images/spiral-zany.png" alt="Spiral Zany" />
             </div>
             <p>
               Sriracha portland taxidermy cronut messenger bag, vegan
               distillery. Vaporware kickstarter air plant mumblecore food truck.
             </p>
           </section>
-
-          <section>
+            <section  class="art-card">
             <h3>Melted Rainbow</h3>
             <div>
-              <img src="melted-rainbow.png" alt="Melted Rainbow" />
+              <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
             </div>
             <p>
               Edison bulb single-origin coffee snackwave, actually ennui
               locavore shabby chic forage.
             </p>
           </section>
-          </div>
+        </div>
         </article>
 
         <hr />
 
         <!-- Contact section -->
         <article id="contact">
-          <div class="contact-info">
           <h2>Contact</h2>
           <p>
             I'd love to hear from you! Please feel free to contact or follow me:
@@ -135,7 +121,6 @@
             </li>
           </ol>
         </article>
-        </div>
       </div>
     </main>
 
