--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div>
             <img
               class="image-circle"
-              src="images/pete-thinkful.png"
+              src="pete-thinkful.png"
               alt="Pete Thinkful"
             />
           </div>
@@ -71,7 +71,7 @@
           <section class="art-card">
             <h3>Abstract Red</h3>
             <div>
-              <img src="images/abstract-red.png" alt="Abstract Red" />
+              <img src="abstract-red.png" alt="Abstract Red" />
             </div>
             <p>
               Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
@@ -81,7 +81,7 @@
             <section  class="art-card">
             <h3>Spiral Zany</h3>
             <div>
-              <img src="images/spiral-zany.png" alt="Spiral Zany" />
+              <img src="spiral-zany.png" alt="Spiral Zany" />
             </div>
             <p>
               Sriracha portland taxidermy cronut messenger bag, vegan
@@ -91,7 +91,7 @@
             <section  class="art-card">
             <h3>Melted Rainbow</h3>
             <div>
-              <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
+              <img src="melted-rainbow.png" alt="Melted Rainbow" />
             </div>
             <p>
               Edison bulb single-origin coffee snackwave, actually ennui
